# Reco-e2e-test

./: .gitignore  CLAUDE.md  DESIGN.md  README.md  TEAM_CHECKLIST.md  context_prompt.md  pyproject.toml
.claude/: settings.json
.claude/skills/autonomous-optimization/: SKILL.md
.claude/skills/build-caller-agent/: SKILL.md
.claude/skills/implement-scoring/: SKILL.md
caller/: agent.yaml
caller/scenarios/: tokusoku_angry_001.json  tokusoku_happy_001.json  tokusoku_interrupting_001.json  tokusoku_number_confirm_001.json  tokusoku_questioning_001.json  tokusoku_refusal_001.json  tokusoku_silent_001.json  tokusoku_wrong_person_001.json
configs/: current_config.json
eval/: offline_eval.py
experiments/: experiments.tsv
monitor/: agent.yaml
orchestrator/: agent.yaml
scoring/: agent.yaml  hallucination_judge.py  latency_extractor.py  naturalness_judge.py  score_call.py
